cmake_minimum_required(VERSION 3.7)
project(Symmetric_NAT_Traversal_in_C++)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
if (NOT DEFINED CMAKE_PREFIX_PATH)
    set(CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR}/staging)
endif (NOT DEFINED CMAKE_PREFIX_PATH)
enable_testing()
add_subdirectory(lib)
add_subdirectory(test)
